# aframe-o3-search

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
aframe_o3_search/: catalogs.py  constants.py  p_astro.py  utils.py
aframe_o3_search/scripts/: apply_vetos.py  cumulative_plots.py  dev.ipynb  figure_3.py  figure_4.py  make_gwtc3_table.py  make_non_gwtc3_tables.py  make_tables.py  table_1_and_2.py
data/aframe/bilby/: prior.prior
data/aframe/bilby/GW190707_083226/: GW190707_083226_result.hdf5  bilby_pipe.ini
data/aframe/bilby/GW190818_232544/: bilby_pipe.ini
data/aframe/bilby/GW200106_134123/: bilby_pipe.ini
data/aresgw/: known.tex  new.tex
data/ias/: new_o3a.latex  new_o3b.latex
data/ogc/: new.tex
paper/: gpstimes.npy  gwtc3-burn-in.txt  gwtc3.hdf5
paper/tables/: non_significant.tex  significant.tex
