[project]
name = "aframe-o3-search"
version = "0.1.0"
description = "Plots annd tables from the aframe o3 offline search"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    {name = "William enoit", email = "emarx@mit.edu" }

]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "ledger",
    "p_astro",
    "utils",
    "plots",
    "gwosc>=0.7.1,<0.8",
    "pandas>=2.2.2,<3",
    "matplotlib<3.8.0",
    "upsetplot>=0.9.0,<0.10",
    "gwpy>=3.0.9,<4",
    "bilby-pipe>=1.5.0,<2",
    "ml4gw>=0.7.0",
    "pyarrow>=18.1.0,<19",
    "pesummary>=1.3.4",
    "num2tex>=0.8",
    "bokeh>=3.7.2",
    "selenium>=4.32.0",
]

[dependency-groups]
dev = ["jupyter>=1.0.0,<2"]

[tool.uv.sources]
ledger = { path = "./aframev2/libs/ledger", editable = true }
p_astro = { path = "./aframev2/libs/p_astro", editable = true }
utils = { path = "./aframev2/libs/utils", editable = true }
plots = { path = "./aframev2/projects/plots", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
