[project]
name = "aframe-o3-search"
version = "0.1.0"
description = "Plots annd tables from the aframe o3 offline search"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    {name = "William enoit", email = "emarx@mit.edu" }

]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "ledger",
    "p_astro",
    "utils",
    "plots",
    "gwosc>=0.7.1,<0.8",
    "pandas>=2.2.2,<3",
    "upsetplot>=0.9.0,<0.10",
    "gwpy>=3.0.9,<4",
    "bilby-pipe>=1.5.0,<2",
    "ml4gw>=0.7.0",
    "pesummary>=1.3.4",
    "num2tex>=0.8",
    "bokeh>=3.7.2",
    "selenium>=4.32.0",
    "zenodo-get>=2.0.0",
    "ml4gw-buoy>=0.3.0",
    "matplotlib>=3.9.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
ledger = { path = "./aframe/libs/ledger", editable = true }
p_astro = { path = "./aframe/libs/p_astro", editable = true }
utils = { path = "./aframe/libs/utils", editable = true }
plots = { path = "./aframe/projects/plots", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79


[tool.ruff.lint]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "W",  "B9"]
ignore = ["W605", "E203", "E501"]  # ignore for consistency with black

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}


[tool.ruff.lint.isort]
known-first-party = ["aframe_o3_search"]
# multi-line-output = 3
# include-trailing-comma = true
